--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,10 @@
   "homepage": "https://github.com/maikhang/blog#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "express-handlebars": "^5.2.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   }
 }
