init mongoose, add Course model

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/maikhang/blog#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.6"
   },
   "devDependencies": {
     "express-handlebars": "^5.2.0",
